Bug 136918 - Style down arrow not completely visible
Summary: Style down arrow not completely visible
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0 target:7.1.3
Keywords: implementationError
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2020-09-21 10:51 UTC by medmedin2014
Modified: 2021-04-10 13:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Style down arrow not completely visible (65.91 KB, image/png)
2020-09-21 10:51 UTC, medmedin2014
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medmedin2014 2020-09-21 10:51:12 UTC
Created attachment 165717 [details]
Style down arrow not completely visible

The down arrow of style list is not correclty displayed. See attached image for mopre info.

Version: 7.0.1.2
Build ID: 00(Build:2)
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: en-US
=7.0.1-1
Calc: threaded

Operating System: Manjaro Linux
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Kernel Version: 5.4.64-1-MANJARO
OS Type: 64-bit
Comment 1 Xisco Faulí 2020-10-12 17:35:00 UTC
Thank you for reporting the bug.
Could you please try to reproduce it with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/ ?
I have set the bug's status to 'NEEDINFO'. Please change it back to 'UNCONFIRMED' if the bug is still present in the latest version.
Comment 2 medmedin2014 2020-10-12 19:24:12 UTC
(In reply to Xisco Faulí from comment #1)
> Thank you for reporting the bug.
> Could you please try to reproduce it with the latest version of LibreOffice
> from https://www.libreoffice.org/download/libreoffice-fresh/ ?
> I have set the bug's status to 'NEEDINFO'. Please change it back to
> 'UNCONFIRMED' if the bug is still present in the latest version.

With 

Version: 7.0.2.2
Build ID: 8349ace3c3162073abd90d81fd06dcfb6b36b994
CPU threads: 2; OS: Linux 5.4; UI render: default; VCL: kf5
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

The same problem is persistent.
Comment 3 Xisco Faulí 2020-11-30 13:01:21 UTC
@Michael, @Ilmari, do you reproduce this with KDE5 ?
Comment 4 Buovjaga 2020-11-30 13:15:33 UTC
(In reply to Xisco Faulí from comment #3)
> @Michael, @Ilmari, do you reproduce this with KDE5 ?

Yes. Notice: https://youtu.be/B3LwHr7LEeU?t=866

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+
Build ID: 79ec66700266a22966d9e308a716be56c9c3a4a7
CPU threads: 8; OS: Linux 5.9; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 30 November 2020
Comment 5 Buovjaga 2020-11-30 14:10:04 UTC
Already seen with oldest commit of Linux 6.4 repo with KDE
Comment 6 Commit Notification 2021-04-06 23:29:06 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ea4fb1559f7b99a0bfaf18f26cb3b6972c9cde1c

tdf#136918 restrict symbol size to button width

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2021-04-07 14:14:12 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/f73138a671d098dee96c11167ec390f209352d9e

tdf#136918 restrict symbol size to button width

It will be available in 7.1.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Buovjaga 2021-04-10 13:37:58 UTC
Verified, thanks

Arch Linux 64-bit
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 3b6408988487c886adc5415f7050f9da13d2e16b
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: kf5
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 8 April 2021