tdf#136918 restrict symbol size to button width

... and scale the button based on the DPI scaling factor.

The symbol size is based on pDev->GetTextHeight(), but the button
itself is fixed to 20px, which would break at some point. So this
at least scales the button witdh based on DPI, just like commit
1eba1c4597f8c2698aa91e2218d8452ad0fbc39c ("tdf#130991 Scale the
drop-down arrow size-request") did for the toolbar buttons.

OTOH this should probably just use the full button width ignoring
the GetTextHeight()...

Change-Id: I43010443265c10ad92f46cdecd1d7155a7a07a3e